Tous les crackages sont terminés : c'est vachement lent : il faut retirer les mutex

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,8 @@
         "xor.h": "c",
         "crackage.h": "c",
         "queue.h": "c",
-        "break_code_c1.h": "c"
+        "break_code_c1.h": "c",
+        "pile.h": "c",
+        "util.h": "c"
     }
 }
