--- a/Partie_3/Makefile
+++ b/Partie_3/Makefile
@@ -35,7 +35,7 @@ asan: CC=clang
 asan: $(EXEC)
 
 clean:
-	@rm -rf *.o ../utilitaire/utiL.o ../Partie_1/encrypt_decrypt_xor.o $(EXEC)
+	@rm -rf $(OBJ) $(XXOBJ) $(EXEC)
 
 .PHONY: clean mrproper
 
@@ -45,9 +45,10 @@ mrproper: clean
 Pile.o : Pile.h ../utilitaire/utiL.h
 Tree.o : Tree.h Pile.h ../utilitaire/utiL.h
 break_code_c1.o : Tree.h Pile.h crackage.h break_code_c1.h ../utilitaire/utiL.h
-break_code_c2.o : crackage.h
-break_code_c3.o : crackage.h
+break_code_c2.o : crackage.h ../utilitaire/utiL.h break_code_c1.h break_code_c2.h break_code_c2_c3.h
+break_code_c3.o : crackage.h break_code_c3.h ../utilitaire/utiL.h ../srcHashMap/uthash.h break_code_c2_c3.h
+break_code_c2_c3.o : break_code_c2_c3.h break_code_c1.h break_code_c2.h break_code_c3.h
 crack_mask.o : ../Partie_1/xor.h ../Partie_1/mask.h
 ../utilitaire/utiL.o : ../utilitaire/utiL.h
 ../Partie_1/encrypt_decrypt_xor.o : ../Partie_1/xor.h ../Partie_1/mask.h
-break_code_main.o : break_code_c1.h ../utilitaire/utiL.h ../Partie_1/xor.h
+break_code_main.o : break_code_c1.h break_code_c2.h break_code_c3.h ../utilitaire/utiL.h ../Partie_1/xor.h
