--- a/Partie_3/Makefile
+++ b/Partie_3/Makefile
@@ -24,9 +24,11 @@ endif
 
 $(EXEC): $(OBJ)
 	@$(CC) -o $@ $^ $(LDFLAGS)
+# @$(MAKE) -C ../Partie_1
 
 %.o: %.c
 	@$(CC) -o $@ -c $< $(CFLAGS)
+
 
 # Special target for AddressSanitizer build
 asan: CFLAGS += -fsanitize=address -g
@@ -35,7 +37,8 @@ asan: CC=clang
 asan: $(EXEC)
 
 clean:
-	@rm -rf $(OBJ) $(XXOBJ) $(EXEC)
+	@rm -rf $(OBJ) $(EXEC)
+# @$(MAKE) -C ../Partie_1 clean
 
 .PHONY: clean mrproper
 
@@ -44,12 +47,11 @@ mrproper: clean
 
 Pile.o : Pile.h ../utilitaire/utiL.h
 Tree.o : Tree.h Pile.h ../utilitaire/utiL.h
-break_code_c1.o : Tree.h Pile.h crackage.h break_code_c1.h ../utilitaire/utiL.h
+break_code_c1.o : Tree.h Pile.h crackage.h break_code_c1.h ../utilitaire/utiL.h ../Partie_1/xor.h
 break_code_c2.o : crackage.h ../utilitaire/utiL.h break_code_c1.h break_code_c2.h break_code_c2_c3.h
-break_code_c3.o : crackage.h break_code_c3.h ../utilitaire/utiL.h ../srcHashMap/uthash.h break_code_c2_c3.h
-break_code_c2_c3.o : break_code_c2_c3.h break_code_c1.h break_code_c2.h break_code_c3.h
+break_code_c3.o : crackage.h break_code_c3.h ../utilitaire/utiL.h break_code_c2_c3.h
+break_code_c2_c3.o : break_code_c2_c3.h break_code_c1.h break_code_c2.h break_code_c3.h 
 c1_stockingKeys.o : c1_stockingKeys.h break_code_c1.h ../utilitaire/utiL.h
 crack_mask.o : ../Partie_1/xor.h ../Partie_1/mask.h
 ../utilitaire/utiL.o : ../utilitaire/utiL.h
-../Partie_1/encrypt_decrypt_xor.o : ../Partie_1/xor.h ../Partie_1/mask.h
 break_code_main.o : break_code_c1.h break_code_c2.h break_code_c3.h ../utilitaire/utiL.h ../Partie_1/xor.h
