--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,6 @@
         "break_code_c1.h": "c",
         "pile.h": "c",
         "util.h": "c"
-    }
+    },
+    "makefile.configureOnOpen": false
 }
