Normalement tout marche ! Manque plus qu'a faire le readme

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,39 +1,98 @@
 {
-    "C_Cpp.errorSquiggles": "disabled",
-    "files.associations": {
-        "__bit_reference": "c",
-        "__node_handle": "c",
-        "atomic": "c",
-        "bitset": "c",
-        "chrono": "c",
-        "cstddef": "c",
-        "__memory": "c",
-        "limits": "c",
-        "locale": "c",
-        "optional": "c",
-        "ratio": "c",
-        "system_error": "c",
-        "tuple": "c",
-        "type_traits": "c",
-        "vector": "c",
-        "*.ds_store": "c",
-        "xor.h": "c",
-        "crackage.h": "c",
-        "queue.h": "c",
-        "break_code_c1.h": "c",
-        "pile.h": "c",
-        "util.h": "c",
-        "chiffrement.h": "c",
-        "threadsegmentationtableauxindex.h": "c",
-        "break_code_c2_c3.h": "c",
-        "stdbool.h": "c",
-        "array": "c",
-        "__tuple": "c",
-        "stdio.h": "c",
-        "break_code_c2.h": "c",
-        "caracterescandidatsindexkey.h": "c",
-        "getopt.h": "c",
-        "pthread.h": "c"
-    },
-    "makefile.configureOnOpen": false
+  "C_Cpp.errorSquiggles": "disabled",
+  "files.associations": {
+    "__bit_reference": "c",
+    "__node_handle": "c",
+    "atomic": "c",
+    "bitset": "c",
+    "chrono": "c",
+    "cstddef": "c",
+    "__memory": "c",
+    "limits": "c",
+    "locale": "c",
+    "optional": "c",
+    "ratio": "c",
+    "system_error": "c",
+    "tuple": "c",
+    "type_traits": "c",
+    "vector": "c",
+    "*.ds_store": "c",
+    "xor.h": "c",
+    "crackage.h": "c",
+    "queue.h": "c",
+    "break_code_c1.h": "c",
+    "pile.h": "c",
+    "util.h": "c",
+    "chiffrement.h": "c",
+    "threadsegmentationtableauxindex.h": "c",
+    "break_code_c2_c3.h": "c",
+    "stdbool.h": "c",
+    "array": "c",
+    "__tuple": "c",
+    "stdio.h": "c",
+    "break_code_c2.h": "c",
+    "caracterescandidatsindexkey.h": "c",
+    "getopt.h": "c",
+    "pthread.h": "c",
+    "tests_crackage.h": "c",
+    "forward_list": "c"
+  },
+  "makefile.configureOnOpen": false,
+  "C_Cpp_Runner.cCompilerPath": "gcc",
+  "C_Cpp_Runner.cppCompilerPath": "g++",
+  "C_Cpp_Runner.debuggerPath": "gdb",
+  "C_Cpp_Runner.cStandard": "",
+  "C_Cpp_Runner.cppStandard": "",
+  "C_Cpp_Runner.msvcBatchPath": "C:/Program Files/Microsoft Visual Studio/VR_NR/Community/VC/Auxiliary/Build/vcvarsall.bat",
+  "C_Cpp_Runner.useMsvc": false,
+  "C_Cpp_Runner.warnings": [
+    "-Wall",
+    "-Wextra",
+    "-Wpedantic",
+    "-Wshadow",
+    "-Wformat=2",
+    "-Wcast-align",
+    "-Wconversion",
+    "-Wsign-conversion",
+    "-Wnull-dereference"
+  ],
+  "C_Cpp_Runner.msvcWarnings": [
+    "/W4",
+    "/permissive-",
+    "/w14242",
+    "/w14287",
+    "/w14296",
+    "/w14311",
+    "/w14826",
+    "/w44062",
+    "/w44242",
+    "/w14905",
+    "/w14906",
+    "/w14263",
+    "/w44265",
+    "/w14928"
+  ],
+  "C_Cpp_Runner.enableWarnings": true,
+  "C_Cpp_Runner.warningsAsError": false,
+  "C_Cpp_Runner.compilerArgs": [],
+  "C_Cpp_Runner.linkerArgs": [],
+  "C_Cpp_Runner.includePaths": [],
+  "C_Cpp_Runner.includeSearch": [
+    "*",
+    "**/*"
+  ],
+  "C_Cpp_Runner.excludeSearch": [
+    "**/build",
+    "**/build/**",
+    "**/.*",
+    "**/.*/**",
+    "**/.vscode",
+    "**/.vscode/**"
+  ],
+  "C_Cpp_Runner.useAddressSanitizer": false,
+  "C_Cpp_Runner.useUndefinedSanitizer": false,
+  "C_Cpp_Runner.useLeakSanitizer": false,
+  "C_Cpp_Runner.showCompilationTime": false,
+  "C_Cpp_Runner.useLinkTimeOptimization": false,
+  "C_Cpp_Runner.msvcSecureNoWarnings": false
 }
