--- a/Partie_3/Makefile
+++ b/Partie_3/Makefile
@@ -11,7 +11,7 @@ else
 endif
 
 EXEC=break_code
-SRC= ../utilitaire/utiL.c ../Partie_1/encrypt_decrypt_xor.c $(wildcard *.c) $(wildcard autres_methodes/*.c)
+SRC= ../utilitaire/utiL.c ../Partie_1/encrypt_decrypt_xor.c $(wildcard *.c) 
 OBJ= $(SRC:.c=.o)
 
 all:
@@ -45,20 +45,23 @@ mrproper: clean
 	@rm -rf $(EXEC)
 
 
-autres_methodes/c1_stockingKeys.o : autres_methodes/c1_stockingKeys.h break_code_c1.h ../utilitaire/utiL.h caracteresCandidatsIndexKey.h autres_methodes/Tree.h
-autres_methodes/ligne0.o : autres_methodes/ligne0.h break_code_c1.h ../utilitaire/utiL.h caracteresCandidatsIndexKey.h
-autres_methodes/NTree.o : autres_methodes/NTree.h Pile.h ../utilitaire/utiL.h
-autres_methodes/Tree.o : autres_methodes/Tree.h Pile.h break_code_c1.h ../utilitaire/utiL.h caracteresCandidatsIndexKey.h
+# autres_methodes/c1_stockingKeys.o : autres_methodes/c1_stockingKeys.h break_code_c1.h ../utilitaire/utiL.h caracteresCandidatsIndexKey.h autres_methodes/Tree.h
+# autres_methodes/ligne0.o : autres_methodes/ligne0.h break_code_c1.h ../utilitaire/utiL.h caracteresCandidatsIndexKey.h
+# autres_methodes/NTree.o : autres_methodes/NTree.h Pile.h ../utilitaire/utiL.h
+# autres_methodes/Tree.o : autres_methodes/Tree.h Pile.h break_code_c1.h ../utilitaire/utiL.h caracteresCandidatsIndexKey.h
 
 caracteresCandidatsIndexKey.o : caracteresCandidatsIndexKey.h
 ThreadSegmentationTableauxIndex.o : ThreadSegmentationTableauxIndex.h
 Pile.o : Pile.h ../utilitaire/utiL.h
 ../utilitaire/utiL.o : ../utilitaire/utiL.h
 
-break_code_c1.o : Pile.h crackage.h break_code_c1.h ../utilitaire/utiL.h ../Partie_1/chiffrement.h ThreadSegmentationTableauxIndex.h caracteresCandidatsIndexKey.h
-break_code_c2.o : crackage.h ../utilitaire/utiL.h break_code_c1.h break_code_c2.h break_code_c2_c3.h
-break_code_c3.o : crackage.h break_code_c3.h ../utilitaire/utiL.h break_code_c2_c3.h
-break_code_c2_c3.o : break_code_c2_c3.h break_code_c1.h break_code_c2.h break_code_c3.h 
+break_code_c1.o : Pile.h crackage.h break_code_c1.h ../utilitaire/utiL.h ../Partie_1/chiffrement.h ThreadSegmentationTableauxIndex.h caracteresCandidatsIndexKey.h tests_crackage.h mutex.h
+break_code_c2.o : crackage.h ../utilitaire/utiL.h break_code_c1.h break_code_c2.h break_code_c2_c3.h mutex.h
+break_code_c3.o : crackage.h break_code_c3.h ../utilitaire/utiL.h break_code_c2_c3.h mutex.h
+break_code_c2_c3.o : break_code_c2_c3.h break_code_c1.h break_code_c2.h break_code_c3.h mutex.h
 crack_mask.o : ../Partie_1/chiffrement.h
 
-break_code_main.o : break_code_c1.h break_code_c2.h break_code_c3.h ../utilitaire/utiL.h ../Partie_1/chiffrement.h
+mutex.o : mutex.h
+tests_crackage.o : tests_crackage.h ../utilitaire/uthash.h ../utilitaire/utiL.h mutex.h
+
+break_code_main.o : break_code_c1.h break_code_c2.h break_code_c3.h ../utilitaire/utiL.h ../Partie_1/chiffrement.h tests_crackage.h
