La tout marche, simplement il manque la boucle de lecture, mais ca ne semble pas vouloir fonctionner

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,7 +35,8 @@
     "getopt.h": "c",
     "pthread.h": "c",
     "tests_crackage.h": "c",
-    "forward_list": "c"
+    "forward_list": "c",
+    "stdlib.h": "c"
   },
   "makefile.configureOnOpen": false,
   "C_Cpp_Runner.cCompilerPath": "gcc",
