La c'est la version finale finale y'a plus le temps de toutes manieres

--- a/Partie_1/Makefile
+++ b/Partie_1/Makefile
@@ -16,24 +16,24 @@ asan:
 
 # Règle pour créer l'exécutable principal encrypt_decrypt
 $(TARGET): $(OBJS)
-	$(CC) $(CFLAGS) -o $(TARGET) $(OBJS)
+	$(CC) $(CFLAGS) -o $(TARGET) $(OBJS) -lm
 
 # Règle pour créer l'exécutable sym_crypt
 sym_crypt: sym_crypt.o encrypt_decrypt_xor.o
-	$(CC) $(CFLAGS) -o $(SYMTARGET) sym_crypt.o encrypt_decrypt_xor.o
+	$(CC) $(CFLAGS) -o $(SYMTARGET) sym_crypt.o encrypt_decrypt_xor.o -lm
 
 main_partie1: main_partie1.o encrypt_decrypt_xor.o
-	$(CC) $(CFLAGS) -o $(MAINTARGET) main_partie1.o encrypt_decrypt_xor.o
+	$(CC) $(CFLAGS) -o $(MAINTARGET) main_partie1.o encrypt_decrypt_xor.o -lm
 
 # Règle pour compiler les fichiers C en fichiers objets
 encrypt_decrypt_xor.o: encrypt_decrypt_xor.c chiffrement.h ../utilitaire/utiL.h
-	$(CC) $(CFLAGS) -c encrypt_decrypt_xor.c
+	$(CC) $(CFLAGS) -c encrypt_decrypt_xor.c -lm
 
 sym_crypt.o: sym_crypt.c chiffrement.h ../utilitaire/utiL.h
-	$(CC) $(CFLAGS) -c sym_crypt.c
+	$(CC) $(CFLAGS) -c sym_crypt.c -lm
 
 ../utilitaire/utiL.o: ../utilitaire/utiL.c ../utilitaire/utiL.h
-	$(CC) $(CFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@ -lm
 
 # Nettoyage des fichiers générés
 .PHONY: clean
